fix(components/OrgFile/TableEditorModal): Fixed TableEditorModal CSS issues

--- a/src/components/OrgFile/components/AttributedString/components/TablePart/stylesheet.css
+++ b/src/components/OrgFile/components/AttributedString/components/TablePart/stylesheet.css
@@ -8,9 +8,9 @@
 
 .table-part__cell {
   border: 1px solid var(--base01);
-
   white-space: pre;
-
+  min-width: 50px;
+  height: 20px;
   vertical-align: top;
 }
 
