--- a/src/components/OrgFile/components/Table/TableCell/stylesheet.css
+++ b/src/components/OrgFile/components/Table/TableCell/stylesheet.css
@@ -1,14 +1,5 @@
 @import "../../../../../colors.css";
 
-.
-.table-part__cell {
-  border: 1px solid var(--base01);
-  vertical-align: top;
-  min-width: 20px;
-  height: 20px;
-  color: var(176, 176, 176);
-}
 
-.table-part__cell--selected {
-  background-color: var(--green-soft);
-}
+
+
