--- a/src/components/UI/Drawer/stylesheet.css
+++ b/src/components/UI/Drawer/stylesheet.css
@@ -64,7 +64,5 @@
 }
 
 .drawer-modal__title {
-  color: var(--base2);
-
   margin-top: 0;
 }
